Added in error handling to the terraform destrtoy workflow

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -30,12 +30,12 @@ jobs:
         id: init
         run: terraform init
 
-        
+
       - name: Terraform Destroy
         id: destroy
         if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: |
-          terraform destroy -auto-approve
+          terraform destroy -auto-approve || echo "Terraform destroy complete, unable to rewrite state file as backend infrastrcutre is deleted."
 
 
 
