--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -28,14 +28,14 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: terraform init -backend-config=backend.tfvars
 
 
       - name: Terraform Destroy
         id: destroy
         if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: |
-          terraform destroy -auto-approve || echo "Terraform destroy complete, unable to rewrite state file as backend infrastrcutre is deleted."
+          terraform destroy -var-file=backend.tfvars -auto-approve || echo "Terraform destroy complete, unable to rewrite state file as backend infrastrcutre is deleted."
 
 
 
