--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,10 +29,11 @@ jobs:
             terraform_version: 1.0.1
             terraform_wrapper: false
 
-        #Creates     
+        #Creates backend
       - name: Create Backend.tfvars file
-        run: echo "$BACKEND_TFVARS" > backend.tfvars
-
+        run: echo "${{ secrets.BACKEND_TFVARS }}" > backend.tfvars
+        
+        #Terraform commands
       - name: Terraform Init
         id: init
         run: terraform init -backend-config=backend.tfvars
