Modified Github actions

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,11 +32,8 @@ jobs:
 
         #Terraform commands
       - name: Initialize Terraform
-        run: |
-          terraform init -backend-config="bucket=${{ secrets.TF_BACKEND_BUCKET }}" \
-                         -backend-config="key=${{ secrets.TF_BACKEND_KEY }}" \
-                         -backend-config="region=${{ secrets.TF_BACKEND_REGION }}" \
-                         -backend-config="dynamodb_table=${{ secrets.TF_BACKEND_DYNAMODB_TABLE }}"
+        run: terraform init
+          
       - name: Terraform Refresh
         id: refresh
         run: terraform refresh
