--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan
+        run: terraform plan -out=tfplan
       
       - name: Terraform Apply
         id: apply
@@ -57,5 +57,3 @@ jobs:
           else
             echo "Skipping Terraform apply."
           fi
-
-      
